--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^6.5.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-mc": "^0.6.0",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
